fix(ffe-buttons): align icons center inline buttons

--- a/packages/ffe-buttons/less/inline-base-button.less
+++ b/packages/ffe-buttons/less/inline-base-button.less
@@ -25,6 +25,7 @@
     padding: 0 @ffe-spacing-2xs;
     text-decoration: none;
     font-size: var(--ffe-fontsize-body-text);
+    align-items: center;
 
     &:active {
         transform: scale(0.97);
